; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_inw.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_inw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahd_softc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ahd_inw(%struct.ahd_softc* %0, i64 %1) #0 {
  %3 = alloca %struct.ahd_softc*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.ahd_softc* %0, %struct.ahd_softc** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = add nsw i64 %7, 1
  %9 = call i32 @ahd_inb(%struct.ahd_softc* %6, i64 %8)
  %10 = shl i32 %9, 8
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @ahd_inb(%struct.ahd_softc* %12, i64 %13)
  %15 = or i32 %11, %14
  ret i32 %15
}

declare dso_local i32 @ahd_inb(%struct.ahd_softc*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
